--- a/src/index.html
+++ b/src/index.html
@@ -3,19 +3,21 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Educa</title>
+  <title>EduCA</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="icono.ico">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://kit.fontawesome.com/048609639d.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
   <app-root></app-root>
 </body>
+
+<script src="https://kit.fontawesome.com/048609639d.js" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
 </html>
